* 2008-03-12 - sebastian.kauss@open-xchange.com

 - Bugfix #11012: [L3] WebDAV interface doesn't send Free/Busy 
                       times as UTC

* 2008-03-11 - sebastian.kauss@open-xchange.com

 - Bugfix #10124: API does not return deleted items properly

 - Bugfix #10991: Unable to create tasks via WebDAV/XML if task 
                  with attachment already exists in the folder

* 2008-03-06 - thorben.betten@open-xchange.com

 - Bugfix #10976: No adding of user time zone's offset to a message's sent
   date

* 2008-02-28 - thorben.betten@open-xchange.com

 - Bugfix #10980: Performing a deeper connectivity check when mail/folder
   storage

* 2008-02-28 - thorben.betten@open-xchange.com

 - Bugfix #10979: Appropriate warn message on interrupted AJP listener on
   bundle stop

* 2008-02-26 - francisco.laguna@open-xchange.com

 - Bugfix #10968: Fix Infostore Search: Order of requested fields shouldn't matter.

* 2008-02-26 - francisco.laguna@open-xchange.com

 -  Bugfix #10962. Don't remove original if the copy is removed.

* 2008-02-25 - thorben.betten@open-xchange.com

 - Bugfix #9910: Added mechanism to ensure folder data consistency after a
   user/group deletion operation

* 2008-02-20 - martin.kauss@open-xchange.com

 - Fixed bug #10717. If a participant was added to an appointment no
   notification mail was sent to this participant because the event
   object only contained only the original participants. This has been
   fixed.

* 2008-02-15 - martin.kauss@open-xchange.com

 - Fixed bug #10077. Deleting an existing exception by providing the
   exception date in the deleted_exception field does not delete the
   exception. This has been fixed.

* 2008-02-14 - martin.kauss@open-xchange.com

 - Fixed bug #10154,  If a user changes an appointment in a shared folder
   all participants except the owner of the shared folder are removed.
   This has been fixed.

 - Fixed the exception handling shown in bug #7141. An unexpected exception